--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "connect-redis": "^6.1.3",
     "date-fns": "^2.29.1",
     "dotenv": "^16.0.1",
