--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.5.1",
     "express-session": "^1.17.3",
     "ioredis": "^5.2.2",
     "method-override": "^3.0.0",
