--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express-session": "^1.17.3",
     "ioredis": "^5.2.2",
     "method-override": "^3.0.0",
-    "mongoose": "^6.5.0"
+    "mongoose": "^6.5.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
