--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "connect-redis": "^6.1.3",
+    "cowsay": "^1.5.0",
     "date-fns": "^2.29.2",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
